--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -2,4 +2,22 @@ body.page-shop {
   .banner {
     background-image: url('../img/banner-home.jpg');
   }
+
+  .shop-categories {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 40px;
+    border-bottom: 3px solid black;
+    a {
+      text-transform: uppercase;
+      margin-right: 30px;
+      font-size: 18px;
+      &:last-child {
+        margin-right: 0;
+      }
+      &.nuxt-link-active {
+        color: #e3c4d3;
+      }
+    }
+  }
 }
