--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -17,6 +17,9 @@ body.page-blog {
         text-transform: uppercase;
         color: #1e3837;
         font-size: 24px;
+        &.nuxt-link-active {
+          color: #cfbbb4;
+        }
       }
     }
     .blog-content {
@@ -28,109 +31,118 @@ body.page-blog {
 body.page-blog-articles {
   .blog-articles {
     max-width: 800px;
-    .blog-article {
+    .blog-article-container {
       margin-bottom: 200px;
-      position: relative;
-      display: flex;
-      .blog-article-image-container {
-        width: calc(80% - 60px);
-        .blog-article-image {
-          width: 100%;
-          padding-bottom: 100%;
+      .blog-article {
+        position: relative;
+        display: flex;
+        .blog-article-image-container {
+          width: calc(80% - 60px);
+          .blog-article-image {
+            width: 100%;
+            padding-bottom: 100%;
+            height: 0;
+            overflow: hidden;
+            background-size: cover;
+            background-position: center center;
+            background-color: lightgrey;
+          }
+        }
+
+        .blog-article-category-color {
+          position: absolute;
+          right: 0;
+          top: 100px;
+          border-bottom: 300px solid #f5e6df;
+          border-left: 100px solid transparent;
+          border-right: 0 solid transparent;
           height: 0;
-          overflow: hidden;
-          background-size: cover;
-          background-position: center center;
+          width: calc(20% + 100px);
         }
-      }
 
-      .blog-article-category-color {
-        position: absolute;
-        right: 0;
-        top: 100px;
-        border-bottom: 300px solid #f5e6df;
-        border-left: 100px solid transparent;
-        border-right: 0 solid transparent;
-        height: 0;
-        width: calc(20% + 100px);
-      }
-
-      .blog-article-link {
-        position: absolute;
-        right: -13px;
-        top: 330px;
-        border-bottom: 73px solid #1d5353;
-        border-left: 20px solid transparent;
-        border-right: 20px solid transparent;
-        height: 0;
-        width: 81px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 50;
-        color: white;
-        transform: rotate(64deg);
-        transition: 0.2s ease transform;
-
-        a {
+        .blog-article-link {
           position: absolute;
-          top: 29px;
-          left: -10px;
-          transform: rotate(-64deg);
-          text-transform: uppercase;
+          right: -13px;
+          top: 330px;
+          border-bottom: 73px solid #1d5353;
+          border-left: 20px solid transparent;
+          border-right: 20px solid transparent;
+          height: 0;
+          width: 81px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          z-index: 50;
+          color: white;
+          transform: rotate(64deg);
           transition: 0.2s ease transform;
-        }
-      }
 
-      .blog-article-category {
-        width: 60px;
-        text-align: left;
-        height: 100%;
-        flex-shrink: 0;
-        span {
-          transform: rotate(-90deg);
-          text-transform: uppercase;
-          transform-origin: 0 100%;
+          a {
+            position: absolute;
+            top: 29px;
+            left: -10px;
+            transform: rotate(-64deg);
+            text-transform: uppercase;
+            transition: 0.2s ease transform;
+          }
+        }
+
+        .blog-article-category {
+          width: 60px;
+          text-align: left;
+          height: 100%;
+          flex-shrink: 0;
+          span {
+            transform: rotate(-90deg);
+            text-transform: uppercase;
+            transform-origin: 0 100%;
+            position: absolute;
+            line-height: 25px;
+            font-size: 24px;
+            letter-spacing: 4px;
+            z-index: 10;
+            height: 25px;
+            width: 100%;
+            left: 35px;
+            bottom: 0;
+          }
+        }
+
+        .blog-article-title {
           position: absolute;
-          line-height: 25px;
-          font-size: 24px;
-          letter-spacing: 4px;
-          z-index: 10;
-          height: 25px;
-          width: 100%;
-          left: 35px;
-          bottom: 0;
+          right: 20px;
+          top: 118px;
+          z-index: 100;
+          font-size: 28px;
+          text-transform: uppercase;
+          letter-spacing: 2px;
+          display: flex;
+          justify-content: flex-end;
+          color: black;
+          margin-bottom: 20px;
+          padding: 20px;
+          background-color: #f7d4c4ad;
+          max-width: 600px;
+          transition: 0.5s ease color;
+        }
+
+        &:hover {
+          .blog-article-title {
+            color: #1d5353;
+          }
+          .blog-article-link {
+            transform: rotate(74deg);
+            a {
+              transform: rotate(-74deg);
+              font-weight: bold;
+            }
+          }
         }
       }
 
-      .blog-article-title {
-        position: absolute;
-        right: 20px;
-        top: 118px;
-        z-index: 100;
-        font-size: 28px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        display: flex;
-        justify-content: flex-end;
-        color: black;
-        margin-bottom: 20px;
-        padding: 20px;
-        background-color: #f7d4c4ad;
-        max-width: 600px;
-        transition: 0.5s ease color;
-      }
-    }
-
-    &:hover {
-      .blog-article-title {
-        color: #1d5353;
-      }
-      .blog-article-link {
-        transform: rotate(74deg);
-        a {
-          transform: rotate(-74deg);
-          font-weight: bold;
+      .blog-article-products {
+        margin-top: 20px;
+        .blog-article-product {
         }
       }
     }
