--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -20,28 +20,45 @@ body.page-homepage {
   .about {
     display: flex;
     justify-content: space-between;
+    align-items: stretch;
     margin-bottom: 200px;
+    height: 400px;
+    margin-top: 50px;
     .about-picture {
-      margin-top: -100px;
       margin-right: 10px;
+      flex-shrink: 0;
       img {
-        width: 400px;
+        height: calc(100% + 150px);
+        margin-top: -150px;
       }
     }
     .about-nav {
-      margin-right: 10px;
-      margin-top: 40px;
+      margin-right: 50px;
+      margin-left: 50px;
+      margin-top: 60px;
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
-      a {
-        margin-bottom: 40px;
+      .about-nav-link {
+        margin-bottom: 60px;
         font-size: 18px;
+        letter-spacing: 2px;
         text-transform: uppercase;
+        color: #a9a9a9;
+        &.about-nav-link--active {
+          color: #2e5655;
+        }
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
     .about-content-wrapper {
       position: relative;
+      max-width: 400px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
       .about-content-title {
         text-transform: uppercase;
         font-size: 20px;
@@ -49,8 +66,11 @@ body.page-homepage {
       }
       .about-content {
         height: 400px;
-        width: 300px;
+        width: 100%;
         overflow: auto;
+        padding-right: 50px;
+        flex-grow: 1;
+        line-height: 25px;
       }
 
       .about-content-sign {
