--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -3,17 +3,33 @@ body {
 }
 
 /* Transitions using the page hook */
-/*
-page-enter-active,
+
+.page-enter-active,
 .page-leave-active {
-  transition: all 0.3s ease-out;
+  transition: all 0.5s ease-out;
 }
 .page-enter,
 .page-leave-active {
   opacity: 0;
   transform-origin: 50% 50%;
 }
-*/
+
+.content-wrapper {
+  position: relative;
+  &:after {
+    position: absolute;
+    background: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s ease all;
+    opacity: 0;
+    content: '';
+    display: none;
+  }
+}
+
 .header {
   .header-nav {
     margin-top: 20px;
@@ -127,7 +143,7 @@ page-enter-active,
         transform-origin: 0 100%;
         position: absolute;
         line-height: 25px;
-        font-size: 24px;
+        font-size: 22px;
         letter-spacing: 4px;
         z-index: 10;
         height: 25px;
