--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -17,6 +17,9 @@ body.page-blog {
         text-transform: uppercase;
         color: #1e3837;
         font-size: 24px;
+        &:last-child {
+          margin-bottom: 0;
+        }
         &.nuxt-link-active {
           color: #cfbbb4;
         }
@@ -33,153 +36,12 @@ body.page-blog-articles {
     max-width: 800px;
     .blog-article-container {
       margin-bottom: 200px;
-      .blog-article {
-        position: relative;
-        display: flex;
-        .blog-article-image-container {
-          width: calc(80% - 60px);
-          .blog-article-image {
-            width: 100%;
-            padding-bottom: 100%;
-            height: 0;
-            overflow: hidden;
-            background-size: cover;
-            background-position: center center;
-            background-color: lightgrey;
-          }
-        }
-
-        .blog-article-category-color {
-          position: absolute;
-          right: 0;
-          top: 100px;
-          border-bottom: 300px solid #f5e6df;
-          border-left: 100px solid transparent;
-          border-right: 0 solid transparent;
-          height: 0;
-          width: calc(20% + 100px);
-        }
-
-        .blog-article-link {
-          position: absolute;
-          right: -13px;
-          top: 330px;
-          border-bottom: 73px solid #1d5353;
-          border-left: 20px solid transparent;
-          border-right: 20px solid transparent;
-          height: 0;
-          width: 81px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          z-index: 50;
-          color: white;
-          transform: rotate(64deg);
-          transition: 0.2s ease transform;
-
-          a {
-            position: absolute;
-            top: 29px;
-            left: -10px;
-            transform: rotate(-64deg);
-            text-transform: uppercase;
-            transition: 0.2s ease transform;
-          }
-        }
-
-        .blog-article-category {
-          width: 60px;
-          text-align: left;
-          height: 100%;
-          flex-shrink: 0;
-          span {
-            transform: rotate(-90deg);
-            text-transform: uppercase;
-            transform-origin: 0 100%;
-            position: absolute;
-            line-height: 25px;
-            font-size: 24px;
-            letter-spacing: 4px;
-            z-index: 10;
-            height: 25px;
-            width: 100%;
-            left: 35px;
-            bottom: 0;
-          }
-        }
-
-        .blog-article-title {
-          position: absolute;
-          right: 20px;
-          top: 118px;
-          z-index: 100;
-          font-size: 28px;
-          text-transform: uppercase;
-          letter-spacing: 2px;
-          display: flex;
-          justify-content: flex-end;
-          color: black;
-          margin-bottom: 20px;
-          padding: 20px;
-          background-color: #f7d4c4ad;
-          max-width: 600px;
-          transition: 0.5s ease color;
-        }
-
-        &:hover {
-          .blog-article-title {
-            color: #1d5353;
-          }
-          .blog-article-link {
-            transform: rotate(74deg);
-            a {
-              transform: rotate(-74deg);
-              font-weight: bold;
-            }
-          }
-        }
-      }
-
-      .blog-article-products {
-        margin-top: 20px;
-        .blog-article-product {
-        }
-      }
     }
   }
 }
 
 body.page-blog-detail {
   .blog-article {
-    .blog-article-title {
-      font-size: 28px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      position: relative;
-      display: flex;
-      justify-content: flex-end;
-      color: #395b5d;
-      margin-bottom: 30px;
-      span {
-        background: white;
-        padding-left: 10px;
-        z-index: 100;
-        position: relative;
-        max-width: 70%;
-      }
-      &:after {
-        z-index: 99;
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 50%;
-        width: 100%;
-        height: 3px;
-        background: #395b5d;
-        margin-top: -1.5px;
-      }
-    }
-
     .blog-article-image {
       margin-bottom: 40px;
       img {
@@ -200,6 +62,37 @@ body.page-blog-detail {
       p {
         margin-bottom: 15px;
         line-height: 25px;
+      }
+    }
+  }
+}
+
+@screen sm {
+  body.page-blog {
+    .blog-container {
+      margin-top: 50px;
+      flex-wrap: wrap;
+      flex-direction: column-reverse;
+      .blog-categories {
+        margin-left: 0;
+        margin-bottom: 50px;
+        a {
+          text-align: center;
+          margin-bottom: 10px;
+        }
+      }
+      .blog-articles {
+        .blog-article-container {
+          margin-bottom: 40px;
+        }
+      }
+    }
+  }
+
+  body.page-blog-detail {
+    .blog-container {
+      .blog-categories {
+        display: none;
       }
     }
   }
