--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -1,15 +1,4 @@
 body.page-homepage {
-  .slick-slider {
-    margin-bottom: 100px;
-    .slick-slide {
-      height: 500px;
-      margin-right: 20px;
-      img {
-        height: 500px;
-      }
-    }
-  }
-
   .banner {
     background-image: url('../img/banner-home.jpg');
     &.banner--homepage-services {
@@ -26,7 +15,7 @@ body.page-homepage {
     margin-top: 50px;
     .about-picture {
       margin-right: 10px;
-      flex-shrink: 0;
+      flex-grow: 1;
       img {
         height: calc(100% + 150px);
         margin-top: -150px;
@@ -59,10 +48,13 @@ body.page-homepage {
       height: 100%;
       display: flex;
       flex-direction: column;
+      width: 100%;
       .about-content-title {
         text-transform: uppercase;
         font-size: 20px;
         letter-spacing: 2px;
+        text-align: center;
+        margin-bottom: 20px;
       }
       .about-content {
         height: 400px;
@@ -99,30 +91,6 @@ body.page-homepage {
   }
 
   .portfolio {
-    .portfolio-title {
-      font-size: 28px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      position: relative;
-      margin-bottom: 10px;
-      span {
-        background: white;
-        padding-right: 5px;
-        z-index: 100;
-        position: relative;
-      }
-      &:after {
-        z-index: 99;
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 24px;
-        width: 100%;
-        height: 3px;
-        background: black;
-      }
-    }
-
     .portfolio-images-container {
       position: relative;
       height: 600px;
@@ -144,6 +112,72 @@ body.page-homepage {
             max-width: 100%;
             height: 100%;
           }
+        }
+      }
+    }
+  }
+
+  .blog {
+    .blog-article-container {
+      max-width: 900px;
+      margin: 150px auto 150px;
+    }
+  }
+}
+
+@screen sm {
+  body.page-homepage {
+    .about {
+      height: auto;
+      flex-wrap: wrap;
+      .about-picture {
+        flex-grow: 0;
+        flex-shrink: 0;
+        width: 100%;
+        img {
+          height: auto;
+          margin-top: 0;
+        }
+      }
+
+      .about-nav {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        .about-nav-link {
+          margin-bottom: 20px;
+        }
+      }
+
+      .about-content-wrapper {
+        max-width: initial;
+      }
+    }
+  }
+}
+
+@screen md {
+  body.page-homepage {
+    .about {
+      .about-picture {
+        img {
+          height: 100%;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+}
+
+@screen lg {
+  body.page-homepage {
+    .about {
+      .about-picture {
+        img {
+          height: 100%;
+          margin-top: 0;
         }
       }
     }
