--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -2,4 +2,153 @@ body.page-services {
   .banner {
     background-image: url('../img/banner-services.jpg');
   }
+
+  .about {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    margin-bottom: 200px;
+    margin-top: 50px;
+    width: 100%;
+    .about-picture {
+      margin-right: 10px;
+      flex-shrink: 0;
+      max-width: 400px;
+      width: 100%;
+      position: relative;
+      display: flex;
+      .about-picture-image-container {
+        width: 80%;
+        .about-picture-image {
+          width: 100%;
+          padding-bottom: 175%;
+          height: 0;
+          overflow: hidden;
+          background-size: cover;
+          background-position: center center;
+          background-color: lightgrey;
+        }
+      }
+
+      .about-picture-category-color {
+        position: absolute;
+        right: 0;
+        top: 200px;
+        border-bottom: 300px solid #f5e6df;
+        border-left: 100px solid transparent;
+        border-right: 0 solid transparent;
+        height: 0;
+        width: calc(20% + 100px);
+      }
+
+      .about-picture-title {
+        position: absolute;
+        right: 20px;
+        top: 220px;
+        z-index: 100;
+        font-size: 28px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        display: flex;
+        justify-content: flex-end;
+        color: black;
+        margin-bottom: 20px;
+        padding: 20px;
+        background-color: #f7d4c4ad;
+        max-width: 600px;
+        transition: 0.5s ease color;
+      }
+    }
+    .about-nav {
+      margin-right: 50px;
+      margin-left: 50px;
+      margin-top: 60px;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      .about-nav-link {
+        margin-bottom: 60px;
+        font-size: 18px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        color: #a9a9a9;
+        &.about-nav-link--active {
+          color: #2e5655;
+        }
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    .about-content-wrapper {
+      position: relative;
+      max-width: 400px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      .about-content-title {
+        text-transform: uppercase;
+        font-size: 20px;
+        letter-spacing: 2px;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      .about-content {
+        height: 400px;
+        width: 100%;
+        overflow: auto;
+        flex-grow: 1;
+        line-height: 25px;
+      }
+    }
+  }
+}
+
+@screen sm {
+  body.page-services {
+    .about {
+      flex-wrap: wrap;
+      margin-top: 0;
+      margin-bottom: 50px;
+      .about-picture {
+        flex-basis: 100%;
+        .about-picture-image-container {
+          .about-picture-image {
+          }
+        }
+
+        .about-picture-category-color {
+        }
+
+        .about-picture-title {
+        }
+      }
+      .about-nav {
+        width: 100%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        .about-nav-link {
+          text-align: center;
+          &.about-nav-link--active {
+            color: #2e5655;
+          }
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+      .about-content-wrapper {
+        max-width: initial;
+        height: auto;
+        width: 100%;
+        margin-bottom: 30px;
+        .about-content-title {
+        }
+        .about-content {
+          max-height: 300px;
+          height: auto;
+        }
+      }
+    }
+  }
 }
