--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -86,6 +86,7 @@ body.page-services {
       height: 100%;
       display: flex;
       flex-direction: column;
+      flex: 1;
       .about-content-title {
         text-transform: uppercase;
         font-size: 20px;
