--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -1,5 +1,6 @@
 body.page-homepage {
   .banner {
+    height: 300px;
     background-image: url('../img/banner-home.jpg');
     &.banner--homepage-services {
       background-image: url('../img/banner-home-services.jpg');
@@ -17,8 +18,8 @@ body.page-homepage {
       margin-right: 10px;
       flex-grow: 1;
       img {
-        height: calc(100% + 150px);
-        margin-top: -150px;
+        height: calc(100% + 100px);
+        margin-top: -100px;
       }
     }
     .about-nav {
@@ -127,6 +128,9 @@ body.page-homepage {
 
 @screen sm {
   body.page-homepage {
+    .banner {
+      height: 250px;
+    }
     .about {
       height: auto;
       flex-wrap: wrap;
