--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -64,7 +64,7 @@ body {
     .header-nav-logo {
       a {
         img {
-          width: 300px;
+          height: 80px;
         }
       }
     }
@@ -75,7 +75,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: 175px;
   background-position: center;
   background-color: #f5e6df;
   background-size: cover;
@@ -230,6 +230,9 @@ body {
 }
 
 @media screen and (max-width: 1279px) {
+  .banner {
+    height: 150px;
+  }
   .header {
     margin-bottom: 10px;
     margin-top: 10px;
@@ -243,7 +246,7 @@ body {
         .header-nav-logo {
           a {
             img {
-              width: 200px;
+              height: 80px;
             }
           }
         }
