--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -25,8 +25,29 @@ body.page-contact {
 
     .form-group {
       margin-bottom: 15px;
+      display: block;
+      > span {
+        display: block;
+      }
+      > div {
+        display: flex;
+        flex-direction: column;
+        textarea,
+        input {
+          flex: 1;
+        }
+      }
       &:last-child {
         margin-bottom: 0;
+      }
+      .invalid {
+        input {
+          border: 1px solid red;
+        }
+        .errors {
+          color: red;
+          margin-top: 5px;
+        }
       }
     }
 
