--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -64,6 +64,12 @@ body.page-homepage {
         padding-right: 50px;
         flex-grow: 1;
         line-height: 25px;
+        p {
+          margin-bottom: 20px;
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
       }
 
       .about-content-sign {
