--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -16,7 +16,8 @@ body.page-homepage {
     margin-top: 50px;
     .about-picture {
       margin-right: 10px;
-      flex-grow: 1;
+      width: 400px;
+      flex-shrink: 0;
       img {
         height: calc(100% + 100px);
         margin-top: -100px;
@@ -64,12 +65,6 @@ body.page-homepage {
         padding-right: 50px;
         flex-grow: 1;
         line-height: 25px;
-        p {
-          margin-bottom: 20px;
-          &:last-child {
-            margin-bottom: 0;
-          }
-        }
       }
 
       .about-content-sign {
