--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -1,6 +1,7 @@
 body.page-shop {
   .banner {
     background-image: url('../img/banner-home.jpg');
+    margin-bottom: 0px;
   }
 
   .shop-categories {
