--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -7,18 +7,18 @@ body.page-services {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
     margin-top: 50px;
     width: 100%;
     .about-picture {
-      margin-right: 10px;
+      margin-left: 60px;
       flex-shrink: 0;
       max-width: 400px;
       width: 100%;
       position: relative;
       display: flex;
       .about-picture-image-container {
-        width: 80%;
+        width: 70%;
         .about-picture-image {
           width: 100%;
           padding-bottom: 175%;
@@ -33,36 +33,45 @@ body.page-services {
       .about-picture-category-color {
         position: absolute;
         right: 0;
-        top: 200px;
-        border-bottom: 300px solid #f5e6df;
+        top: 140px;
+        border-bottom: 279px solid #f5e6df;
         border-left: 100px solid transparent;
         border-right: 0 solid transparent;
         height: 0;
-        width: calc(20% + 100px);
+        width: calc(30% + 100px);
       }
 
       .about-picture-title {
         position: absolute;
-        right: 20px;
-        top: 220px;
+        right: 10px;
+        top: 190px;
         z-index: 100;
-        font-size: 28px;
+        font-size: 18px;
         text-transform: uppercase;
         letter-spacing: 2px;
         display: flex;
         justify-content: flex-end;
         color: black;
-        margin-bottom: 20px;
-        padding: 20px;
-        background-color: #f7d4c4ad;
-        max-width: 600px;
+        width: 50%;
         transition: 0.5s ease color;
+        display: flex;
+        .black-bar {
+          height: 2px;
+          margin-right: 10px;
+          background: black;
+          margin-top: 13px;
+          width: 100%;
+          flex-grow: 1;
+        }
+        span:not(.black-bar) {
+          flex-grow: 0;
+        }
       }
     }
     .about-nav {
-      margin-right: 50px;
+      margin-right: 60px;
       margin-left: 50px;
-      margin-top: 60px;
+      margin-top: 90px;
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
@@ -92,7 +101,8 @@ body.page-services {
         font-size: 20px;
         letter-spacing: 2px;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
+        margin-top: 30px;
       }
       .about-content {
         height: 400px;
@@ -101,6 +111,17 @@ body.page-services {
         flex-grow: 1;
         line-height: 25px;
       }
+    }
+  }
+
+  .testimonial {
+    .title {
+      margin-top: 30px;
+      margin-bottom: 50px;
+      font-size: 32px;
+      letter-spacing: 4px;
+      text-transform: uppercase;
+      text-align: center;
     }
   }
 }
