--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -31,6 +31,9 @@ body {
 }
 
 .header {
+  > .container {
+    position: relative;
+  }
   margin-top: 20px;
   margin-bottom: 20px;
   .header-nav {
@@ -66,6 +69,26 @@ body {
         img {
           height: 80px;
         }
+      }
+    }
+  }
+
+  .header-social-links {
+    position: absolute;
+    right: -15px;
+    top: -18px;
+    background: #1c5253;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    padding: 3px 10px 2px;
+    z-index: 110;
+    a {
+      margin-bottom: 5px;
+      &:last-child {
+        margin-bottom: 0;
       }
     }
   }
@@ -274,6 +297,9 @@ body {
   .header {
     margin-bottom: 10px;
     margin-top: 10px;
+    .header-social-links {
+      display: none;
+    }
     .header-nav {
       &.header-nav--desktop {
         display: none;
