--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -70,7 +70,6 @@ body.page-services {
     }
     .about-nav {
       margin-right: 60px;
-      margin-left: 50px;
       margin-top: 90px;
       display: flex;
       flex-wrap: wrap;
@@ -134,6 +133,7 @@ body.page-services {
       margin-bottom: 50px;
       .about-picture {
         flex-basis: 100%;
+        margin-left: 0;
         .about-picture-image-container {
           .about-picture-image {
           }
@@ -149,8 +149,10 @@ body.page-services {
         width: 100%;
         margin-top: 30px;
         margin-bottom: 30px;
+        margin-right: 0;
         .about-nav-link {
           text-align: center;
+          margin-bottom: 20px;
           &.about-nav-link--active {
             color: #2e5655;
           }
