--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -31,9 +31,6 @@ body {
 }
 
 .header {
-  > .container {
-    position: relative;
-  }
   margin-top: 20px;
   margin-bottom: 20px;
   .header-nav {
@@ -59,7 +56,7 @@ body {
           margin-right: 0;
         }
         &.nuxt-link-active {
-          color: #cfbbb4;
+          color: #1c5253;
         }
       }
     }
@@ -74,23 +71,19 @@ body {
   }
 
   .header-social-links {
-    position: absolute;
-    right: -15px;
-    top: -18px;
+    position: fixed;
+    right: 2px;
+    top: 2px;
+    height: 116px;
     background: #1c5253;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     color: white;
-    padding: 3px 10px 2px;
+    padding: 3px 5px 2px;
     z-index: 110;
-    a {
-      margin-bottom: 5px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
+    border-radius: 0px;
   }
 }
 
@@ -115,39 +108,6 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     text-align: center;
-  }
-}
-
-.banner-slider {
-  position: relative;
-  transition: 1s ease background-image, 0.5s ease height, 0.5s ease opacity,
-    0.5s ease background-color;
-  background-color: #f5e6df;
-  height: 300px;
-  &.banner-slider--hidden {
-    height: 0 !important;
-    opacity: 0;
-  }
-
-  .banner-slider-title {
-    color: white;
-    font-size: 24px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-align: center;
-    position: absolute;
-    display: flex;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-  }
-
-  .slick-slider {
-    height: 100%;
   }
 }
 
@@ -179,10 +139,10 @@ body {
       }
     }
     .footer-contact-title {
-      margin-top: 10px;
+      margin-top: 40px;
       text-align: center;
       color: #194339;
-      font-size: 32px;
+      font-size: 28px;
       letter-spacing: 2px;
       text-transform: uppercase;
       margin-bottom: 50px;
@@ -208,10 +168,10 @@ body {
         font-size: 22px;
         letter-spacing: 4px;
         z-index: 10;
-        height: 25px;
+        height: 30px;
         width: 100%;
         left: 35px;
-        bottom: 20px;
+        bottom: 10px;
       }
     }
     .footer-instagram-pictures {
@@ -240,15 +200,21 @@ body {
     margin-bottom: 10px;
     .container {
       display: block;
+    }
+    span:not(.container) {
+      background: white;
+      padding-right: 10px;
+      padding-left: 10px;
+      z-index: 100;
+      position: relative;
+    }
+
+    .container {
       span {
-        background: white;
-        padding-right: 10px;
-        padding-left: 10px;
         margin-left: -10px;
-        z-index: 100;
-        position: relative;
       }
     }
+
     &:after {
       z-index: 99;
       content: '';
@@ -294,6 +260,7 @@ body {
   .banner {
     height: 150px;
   }
+
   .header {
     margin-bottom: 10px;
     margin-top: 10px;
