--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -3,7 +3,12 @@ body.page-homepage {
     height: 300px;
     background-image: url('../img/banner-home.jpg');
     &.banner--homepage-services {
-      background-image: url('../img/banner-home-services.jpg');
+      background-image: url('../img/banner-home.jpg');
+      filter: grayscale(1);
+      transition: 0.5s ease filter;
+      &:hover {
+        filter: grayscale(0);
+      }
     }
   }
 
