--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -71,15 +71,15 @@ body {
   }
 
   .header-social-links {
-    position: fixed;
-    right: 2px;
-    top: 2px;
+    position: absolute;
+    right: -67px;
+    top: -18px;
     height: 116px;
     background: #1c5253;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     color: white;
     padding: 3px 5px 2px;
     z-index: 110;
