--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -33,6 +33,9 @@ body {
 .header {
   margin-top: 20px;
   margin-bottom: 20px;
+  > .container {
+    position: relative;
+  }
   .header-nav {
     &.header-nav--mobile {
       display: none;
