--- a/assets/scss/_portfolio.scss
+++ b/assets/scss/_portfolio.scss
@@ -24,6 +24,7 @@ body.page-portfolio {
 
   .portfolio-masonry {
     .portfolio-masonry-item {
+      cursor: pointer;
       margin-bottom: 20px;
     }
   }
