--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -272,7 +272,42 @@ body {
   background: rgba(255, 255, 255, 0.9) !important;
 
   .cool-lightbox-toolbar {
-    display: none !important;
+    background: none;
+    .cool-lightbox-toolbar__btn:not(:last-child) {
+      display: none;
+    }
+
+    .cool-lightbox-toolbar__btn {
+      background: linear-gradient(
+        120deg,
+        hsla(45, 72%, 69%, 0.7),
+        hsla(45, 72%, 69%, 0.8) 50%,
+        rgba(39, 52, 139, 0.85)
+      ) !important;
+      position: relative;
+      right: 5px;
+      top: 5px;
+      height: 35px;
+      width: 35px;
+      padding: 0;
+      &:before {
+        content: '';
+        top: 1px;
+        left: 1px;
+        right: 1px;
+        bottom: 1px;
+        background: #fff;
+        position: absolute;
+        z-index: 1;
+      }
+      &:after {
+        content: 'X';
+        z-index: 2;
+        position: relative;
+        top: 2px;
+        color: black;
+      }
+    }
   }
 
   .cool-lightbox-button--next {
