--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -24,7 +24,7 @@ body.page-homepage {
       width: 400px;
       flex-shrink: 0;
       img {
-        height: calc(100% + 100px);
+        // height: calc(100% + 100px);
         margin-top: -100px;
       }
     }
@@ -134,7 +134,7 @@ body.page-homepage {
     }
     .blog-article-container {
       max-width: 900px;
-      margin: 100px auto 150px;
+      margin: 200px 0 150px;
     }
   }
 }
