--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -9,6 +9,7 @@ body.page-shop {
     padding-bottom: 10px;
     margin-bottom: 40px;
     border-bottom: 3px solid black;
+    background-color: white;
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -22,6 +23,30 @@ body.page-shop {
         &.nuxt-link-active {
           color: #e3c4d3;
         }
+      }
+    }
+  }
+
+  .shop--sticky {
+    .shop-categories {
+      position: fixed;
+      top: 120px;
+      z-index: 99;
+      background: white;
+      width: 100%;
+    }
+
+    .shop-content {
+      margin-top: 90px;
+    }
+  }
+}
+
+@screen sm {
+  body.page-shop {
+    .shop--sticky {
+      .shop-categories {
+        top: 90px;
       }
     }
   }
