--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -42,7 +42,7 @@ body.page-shop {
   }
 }
 
-@screen sm {
+@media screen and (max-width: 1279px) {
   body.page-shop {
     .shop--sticky {
       .shop-categories {
