--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -36,7 +36,7 @@ body {
   width: 100%;
   z-index: 100;
   background: white;
-  padding: 20px 0;
+  padding: 2px 0;
   box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.1);
   > .container {
     position: relative;
@@ -51,7 +51,7 @@ body {
     justify-content: space-between;
 
     nav {
-      a {
+      > a {
         font-size: 20px;
         text-transform: uppercase;
         letter-spacing: 2px;
@@ -69,6 +69,16 @@ body {
       }
     }
 
+    .header-nav-left {
+      flex-basis: 30%;
+    }
+
+    .header-nav-right {
+      flex-basis: 30%;
+      display: flex;
+      align-items: center;
+    }
+
     .header-nav-logo {
       a {
         img {
@@ -79,9 +89,6 @@ body {
   }
 
   .header-social-links {
-    position: absolute;
-    right: -67px;
-    top: -18px;
     height: 116px;
     background: #1c5253;
     display: flex;
@@ -92,6 +99,7 @@ body {
     padding: 3px 5px 2px;
     z-index: 110;
     border-radius: 0px;
+    margin-left: 20px;
   }
 }
 
@@ -202,8 +210,24 @@ body {
       .footer-instagram-picture {
         width: 32%;
         margin-bottom: 10px;
+        position: relative;
+        .icon {
+          position: absolute;
+          top: 5px;
+          right: 5px;
+          color: white;
+        }
         img {
           width: 100%;
+        }
+
+        .footer-instagram-picture-video {
+          height: 0;
+          padding-bottom: 100%;
+          overflow: hidden;
+          video {
+            object-fit: cover;
+          }
         }
       }
     }
