--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -56,6 +56,7 @@ body.page-homepage {
       display: flex;
       flex-direction: column;
       width: 100%;
+      margin-right: 36px;
       .about-content-title {
         text-transform: uppercase;
         font-size: 20px;
