--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -68,7 +68,7 @@ body.page-services {
       }
     }
     .about-nav {
-      margin-right: 60px;
+      margin-right: 30px;
       margin-top: 90px;
       display: flex;
       flex-wrap: wrap;
@@ -89,11 +89,11 @@ body.page-services {
     }
     .about-content-wrapper {
       position: relative;
-      max-width: 500px;
+      max-width: 600px;
       height: 100%;
       display: flex;
       flex-direction: column;
-      flex: 1;
+      flex-grow: 1;
       .about-content-title {
         text-transform: uppercase;
         font-size: 20px;
